# vscoq-language-server

./: .gitmodules  Makefile  README.md  vscoq-language-server.opam
.github/workflows/: CI.yml
dm/: README.md  delegationManager.ml  delegationManager.mli  document.ml  document.mli  documentManager.ml  documentManager.mli  dune  executionManager.ml  executionManager.mli  parTactic.ml  parTactic.mli  scheduler.ml  scheduler.mli
sel/: README.md  dune  sel.ml  sel.mli
tests/interactive/: test.v  test_noproof.v
vscoqtop/: dune  lspManager.ml  lspManager.mli  vscoqtop.ml  vscoqtop_proof_worker.ml  vscoqtop_tactic_worker.ml
